Fixes navigation bar to top/Adds main content spacer/Creates collapsable navbar for mobile

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -128,3 +128,7 @@ nav {
 textarea {
   min-height: 250px;
 }
+
+#spacer {
+  height: 5em;
+}
